结算页 部分

--- a/templates/flow_cart.html
+++ b/templates/flow_cart.html
@@ -17,9 +17,9 @@
 
 <div class="cart-step" id="J_cartTab">
     <ul>
-        <li class="cur">1. {$lang.submit_order}</li>
-        <li>2. {$lang.confirm_order}</li>
-        <li>3. {$lang.order_success}</li>
+        <li class="cur">1. {$lang.step_submit_order}</li>
+        <li>2. {$lang.step_confirm_order}</li>
+        <li>3. {$lang.step_order_success}</li>
     </ul>
 </div>
 
