--- a/templates/flow_consignee.html
+++ b/templates/flow_consignee.html
@@ -17,9 +17,9 @@
 
 <div class="cart-step" id="J_cartTab">
     <ul>
-        <li class="cur">1. {$lang.submit_order}</li>
-        <li>2. {$lang.confirm_order}</li>
-        <li>3. {$lang.order_success}</li>
+        <li>1. {$lang.step_submit_order}</li>
+        <li class="cur">2. {$lang.step_confirm_order}</li>
+        <li>3. {$lang.step_order_success}</li>
     </ul>
 </div>
 
@@ -57,8 +57,9 @@
                     <dd class="dd2">
                         <select name="country" id="selCountries_{$sn}" onchange="region.changed(this, 1, 'selProvinces_{$sn}')" style="border:1px solid #ccc;">
                             <option value="0" {if $consignee.country eq 0}selected{/if}>{$lang.choose_country}</option>
-                            <option value="3409" {if $consignee.country eq 3409}selected{/if}>US</option>
-                            <option value="1" {if $consignee.country eq 1}selected{/if}>中国</option>
+                            {foreach from=$country_list item=country}
+                            <option value="{$country.region_id}" {if $country.region_id eq $consignee.country}selected{/if}>{$country.region_name}</option>
+                            {/foreach}
                         </select>
 
                         <select name="province" id="selProvinces_{$sn}" onchange="region.changed(this, 2, 'selCities_{$sn}')" style="border:1px solid #ccc;">
@@ -148,8 +149,9 @@
                     <dd class="dd2">
                         <select style="border:1px solid #ccc; padding:2px" onchange="region.changed(this, 1, 'selProvinces_{$new_sn}')" id="selCountries_{$new_sn}" name="country">
                             <option value="0">{$lang.choose_country}</option>
-                            <option value="3409">US</option>
-                            <option value="1">中国</option>
+                            {foreach from=$country_list item=country}
+                            <option value="{$country.region_id}">{$country.region_name}</option>
+                            {/foreach}
                         </select>
 
                         <select style="border:1px solid #ccc; padding:2px" onchange="region.changed(this, 2, 'selCities_{$new_sn}')" id="selProvinces_{$new_sn}" name="province">
@@ -191,11 +193,9 @@
             </form>
         </div>
     </section>
-
-
-
 </div>
 
+{include file='foot.html'}
 
 
 <script type="text/javascript" src="js/transport.js"></script>
@@ -267,20 +267,7 @@ function cartsubmit_click()
 <script type="text/javascript" src="js/region.js"></script>
 <script type="text/javascript">
           region.isAdmin = false;
-                    var consignee_not_null = "收货人姓名不能为空！";
-                    var country_not_null = "请您选择收货人所在国家！";
-                    var province_not_null = "请您选择收货人所在省份！";
-                    var city_not_null = "请您选择收货人所在城市！";
-                    var district_not_null = "请您选择收货人所在区域！";
-                    var invalid_email = "您输入的邮件地址不是一个合法的邮件地址。";
-                    var address_not_null = "收货人的详细地址不能为空！";
-                    var tele_not_null = "电话不能为空！";
-                    var shipping_not_null = "请您选择配送方式！";
-                    var payment_not_null = "请您选择支付方式！";
-                    var goodsattr_style = "1";
-                    var tele_invaild = "电话号码不有效的号码";
-                    var zip_not_num = "邮政编码只能填写数字";
-                    var mobile_invaild = "手机号码不是合法号码";
+                    
           
           
           onload = function() {
@@ -312,43 +299,6 @@ function select_com_address(obj)
 
   obj.checked = true;
 }
-</script>
-<script type="text/javascript">
-var process_request = "正在处理您的请求...";
-var username_empty = "用户名不能为空。";
-var username_shorter = "用户名长度不能少于 3 个字符。";
-var username_invalid = "用户名只能是由字母数字以及下划线组成。";
-var password_empty = "登录密码不能为空。";
-var password_shorter = "登录密码不能少于 6 个字符。";
-var confirm_password_invalid = "两次输入密码不一致";
-var email_empty = "Email 为空";
-var email_invalid = "Email 不是合法的地址";
-var agreement = "您没有接受协议";
-var msn_invalid = "msn地址不是一个有效的邮件地址";
-var qq_invalid = "QQ号码不是一个有效的号码";
-var home_phone_invalid = "家庭电话不是一个有效号码";
-var office_phone_invalid = "办公电话不是一个有效号码";
-var mobile_phone_invalid = "手机号码不是一个有效号码";
-var msg_un_blank = "* 用户名不能为空";
-var msg_un_length = "* 用户名最长不得超过7个汉字";
-var msg_un_format = "* 用户名含有非法字符";
-var msg_un_registered = "* 用户名已经存在,请重新输入";
-var msg_can_rg = "* 可以注册";
-var msg_email_blank = "* 邮件地址不能为空";
-var msg_email_registered = "* 邮箱已存在,请重新输入";
-var msg_email_format = "* 邮件地址不合法";
-var msg_blank = "不能为空";
-var no_select_question = "您没有完成密码提示问题的操作";
-var passwd_balnk = "密码中不能包含空格";
-var username_exist = "用户名 %s 已经存在";
-var compare_no_goods = "您没有选定任何需要比较的商品或者比较的商品数少于 2 个。";
-var btn_buy = "购买";
-var is_cancel = "取消";
-var select_spe = "请选择商品属性";
-
-$(function(){
-
-})
 </script>
 </body>
 </html>
