--- a/templates/head.html
+++ b/templates/head.html
@@ -23,4 +23,6 @@
 <script src="js/jquery-2.1.1.min.js"></script>
 <script>var Zepto = jQuery</script>
 <script type="text/javascript" src="js/TouchSlide.js"></script>
+
+<script type="text/javascript" src="js/msgs.js"></script>
 <script type="text/javascript" src="js/ectouch.js"></script>
