推荐前3 & 购物车微调

--- a/templates/flow_cart.html
+++ b/templates/flow_cart.html
@@ -26,7 +26,10 @@
 
 <style>
   .itemlist { overflow-x: hidden; }
-  .itemlist li .b .cha { right: 2.4rem; }
+  .itemlist li h4 { padding: 0 3rem 0 0.6rem; }
+  .itemlist li .b { padding: 0 3rem 0 0.6rem; }
+  .itemlist li .b .cha { right: 2.2rem; }
+  .itemlist li .inputBg { width: 30%; }
   .inputBg { padding: 0; }
   .empty-cart .cart-logo { margin: 1rem auto; }
 </style>
